Commit 1.4 Done parsing everything.. Publishers list done.. Category almost done :)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
 
         <activity android:name=".activity.CategoryActivity" />
 
+        <activity android:name=".activity.BooksActivity" />
+
     </application>
 
 </manifest>
