--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
 
         <activity android:name=".activity.BooksActivity" />
 
+        <activity android:name=".activity.BookDetailsActivity" />
+
     </application>
 
 </manifest>
